# pylack

./: Dockerfile  README.md  check_os.sh  pylack  pylack.sh  pylack.zsh  pylack_test.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
pylack/: main.py
test/: text.py
